--- a/templates/default/sentry/sentry.conf.erb
+++ b/templates/default/sentry/sentry.conf.erb
@@ -91,6 +91,8 @@ SENTRY_REDIS_OPTIONS = {
   }
 }
 
+SENTRY_CACHE = 'sentry.cache.redis.RedisCache'
+
 <% if @tsdb %>
 SENTRY_TSDB = 'sentry.tsdb.redis.RedisTSDB'
 
